--- a/src/Skynet.Protocol/Skynet.Protocol.csproj
+++ b/src/Skynet.Protocol/Skynet.Protocol.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Copyright>© 2018-2020 Daniel Lerch, Twometer and Beniox</Copyright>
+    <Version>5.2.0</Version>
+    <PackageLicenseExpression>GPL-3.0</PackageLicenseExpression>
+    <Authors>Daniel Lerch, Twometer, Beniox</Authors>
+    <RepositoryUrl>https://github.com/skynet-im/skynet-dotnet</RepositoryUrl>
+    <Company>Skynet Messenger</Company>
+    <Product>Skynet Protocol Library</Product>
   </PropertyGroup>
 
   <ItemGroup>
