--- a/src/Skynet.Core/Skynet.Core.csproj
+++ b/src/Skynet.Core/Skynet.Core.csproj
@@ -6,11 +6,13 @@
     <Nullable>enable</Nullable>
     <Copyright>© 2017-2020 Daniel Lerch</Copyright>
     <Version>5.2.0</Version>
-    <PackageLicenseExpression>GPL-3.0</PackageLicenseExpression>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Authors>Daniel Lerch</Authors>
     <RepositoryUrl>https://github.com/skynet-im/skynet-dotnet</RepositoryUrl>
     <Company>Skynet Messenger</Company>
     <Product>Skynet Core Library</Product>
+    <Description>Skynet Core Library - referenced by all Skynet applications.
+It contains global data types and networking fundamentals.</Description>
   </PropertyGroup>
 
   <ItemGroup>
