--- a/src/Skynet.Protocol/Skynet.Protocol.csproj
+++ b/src/Skynet.Protocol/Skynet.Protocol.csproj
@@ -4,14 +4,17 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Copyright>© 2018-2020 Daniel Lerch, Twometer and Beniox</Copyright>
     <Version>5.2.0</Version>
-    <PackageLicenseExpression>GPL-3.0</PackageLicenseExpression>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Authors>Daniel Lerch, Twometer, Beniox</Authors>
     <RepositoryUrl>https://github.com/skynet-im/skynet-dotnet</RepositoryUrl>
     <Company>Skynet Messenger</Company>
     <Product>Skynet Protocol Library</Product>
+    <Description>Skynet Protocol Library - referenced by server and all client applications.
+It contains packet abstraction, attributes and implementation as well as channel message encryption.</Description>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Skynet.Core" Version="5.2.0" />
     <ProjectReference Include="..\Skynet.Core\Skynet.Core.csproj" />
   </ItemGroup>
 
