--- a/src/Skynet.Core/Skynet.Core.csproj
+++ b/src/Skynet.Core/Skynet.Core.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>Skynet</RootNamespace>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Copyright>© 2017-2020 Daniel Lerch</Copyright>
     <Version>5.2.1</Version>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
