--- a/src/Skynet.Protocol/Skynet.Protocol.csproj
+++ b/src/Skynet.Protocol/Skynet.Protocol.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Copyright>© 2018-2020 Daniel Lerch, Twometer and Beniox</Copyright>
     <Version>5.2.1</Version>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
