--- a/src/Skynet.Protocol/Skynet.Protocol.csproj
+++ b/src/Skynet.Protocol/Skynet.Protocol.csproj
@@ -11,8 +11,10 @@
     <RepositoryUrl>https://github.com/skynet-im/skynet-dotnet</RepositoryUrl>
     <Company>Skynet Messenger</Company>
     <Product>Skynet Protocol Library</Product>
-    <Description>Skynet Protocol Library - referenced by server and all client applications.
-It contains packet abstraction, attributes and implementation as well as channel message encryption.</Description>
+    <Description>
+      Skynet Protocol Library - referenced by server and all client applications.
+      It contains packet abstraction, attributes and implementation as well as channel message encryption.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
